RestaurantManagement/src/objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>Bill_Id__c</fullName>
        <displayFormat>B-{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Bill Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Restaurant_ID__c</fullName>
        <label>Restaurant ID</label>
        <referenceTo>Restaurant__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TableNumber__c</fullName>
        <label>TableNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>